Fix tab completion